named entity recognizer is added

--- a/examples.ipynb
+++ b/examples.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "546cd174",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "0acc0352",
    "metadata": {
     "scrolled": true
@@ -32,7 +32,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[dynet] random seed: 3573440932\n",
+      "[dynet] random seed: 1830085866\n",
       "[dynet] allocating memory: 512MB\n",
       "[dynet] memory allocation done.\n"
      ]
@@ -41,8 +41,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2021-08-27 20:25:14,873 - /Users/meliksahturker/Desktop/Turkish-NLP-preprocessing-module/pp/morph_analyzer/model.py - INFO - 116} - Loading Pre-Trained Model\n",
-      "2021-08-27 20:25:15,924 - /Users/meliksahturker/Desktop/Turkish-NLP-preprocessing-module/pp/morph_analyzer/model.py - INFO - 119} - Ready\n"
+      "2021-09-07 22:19:45,407 - /Users/meliksahturker/Desktop/Turkish-NLP-preprocessing-module/pp/morph_analyzer/model.py - INFO - 116} - Loading Pre-Trained Model\n",
+      "2021-09-07 22:19:46,407 - /Users/meliksahturker/Desktop/Turkish-NLP-preprocessing-module/pp/morph_analyzer/model.py - INFO - 119} - Ready\n"
      ]
     }
    ],
@@ -53,8 +53,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "99bfd060",
+   "execution_count": 4,
+   "id": "746635bc",
    "metadata": {},
    "outputs": [
     {
@@ -67,7 +67,7 @@
        " 'çalış+Verb+Pos+Prog1+A3pl+Past']"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -78,8 +78,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "544c70b9",
+   "execution_count": 5,
+   "id": "07fe767a",
    "metadata": {},
    "outputs": [
     {
@@ -88,7 +88,7 @@
        "['şimdi+Adverb', 'baş+Noun+A3sg+Pnon+Abl', 'başla+Verb+Pos+Imp+A2sg']"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -99,8 +99,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "47125b31",
+   "execution_count": 6,
+   "id": "356ed013",
    "metadata": {},
    "outputs": [
     {
@@ -112,7 +112,7 @@
        " 'at+Verb+Pos+Imp+A2sg']"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -123,8 +123,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "1ac05cbc",
+   "execution_count": 7,
+   "id": "0c73e419",
    "metadata": {},
    "outputs": [
     {
@@ -136,7 +136,7 @@
        " 'al+Verb+Pos+Past+A3sg']"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -147,8 +147,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "06a7af3a",
+   "execution_count": 8,
+   "id": "644cc104",
    "metadata": {},
    "outputs": [
     {
@@ -157,13 +157,107 @@
        "['başar+Verb+Pos^DB+Verb+Able^DB+Noun+PastPart+A3pl+P1sg+Gen']"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "ma.predict(\"başarabildiklerimin\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "442ee1d3",
+   "metadata": {},
+   "source": [
+    "#### Named Entity Recognizer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "abef8b95",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2021-09-07 22:20:17,578 - tensorflow - DEBUG - 36} - Falling back to TensorFlow client; we recommended you install the Cloud TPU client directly with pip install cloud-tpu-client.\n",
+      "2021-09-07 22:20:18,876 - h5py._conv - DEBUG - 47} - Creating converter from 7 to 5\n",
+      "2021-09-07 22:20:18,877 - h5py._conv - DEBUG - 47} - Creating converter from 5 to 7\n",
+      "2021-09-07 22:20:18,877 - h5py._conv - DEBUG - 47} - Creating converter from 7 to 5\n",
+      "2021-09-07 22:20:18,878 - h5py._conv - DEBUG - 47} - Creating converter from 5 to 7\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2021-09-07 22:20:26.352932: I tensorflow/core/platform/cpu_feature_guard.cc:142] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
+      "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2021-09-07 22:20:27,858 - h5py._conv - DEBUG - 77} - Creating converter from 3 to 5\n"
+     ]
+    }
+   ],
+   "source": [
+    "#import os\n",
+    "#os.environ['TF_XLA_FLAGS'] = '--tf_xla_enable_xla_devices'\n",
+    "from pp.named_entitiy_recognizer import NamedEntityRecognizer\n",
+    "ner = NamedEntityRecognizer()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "a80b4315",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2021-09-07 22:20:27.909913: I tensorflow/compiler/mlir/mlir_graph_optimization_pass.cc:185] None of the MLIR Optimization Passes are enabled (registered 2)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[('Ben', 'O'),\n",
+       " ('Melikşah', 'O'),\n",
+       " (',', 'O'),\n",
+       " ('28', 'O'),\n",
+       " ('yaşındayım', 'O'),\n",
+       " (',', 'O'),\n",
+       " ('İstanbul', 'ORG'),\n",
+       " (\"'\", 'O'),\n",
+       " ('da', 'O'),\n",
+       " ('ikamet', 'O'),\n",
+       " ('ediyorum', 'O'),\n",
+       " ('ve', 'O'),\n",
+       " ('VNGRS', 'LOC'),\n",
+       " ('AI', 'LOC'),\n",
+       " ('Takımı', 'LOC'),\n",
+       " (\"'\", 'O'),\n",
+       " ('nda', 'O'),\n",
+       " ('çalışıyorum', 'O'),\n",
+       " ('.', 'O')]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ner.predict(\"Ben Melikşah, 28 yaşındayım, İstanbul'da ikamet ediyorum ve VNGRS AI Takımı'nda çalışıyorum.\")"
    ]
   },
   {
@@ -185,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "id": "8f8941f1",
    "metadata": {},
    "outputs": [
@@ -193,8 +287,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2021-08-27 20:25:17,558 - /Users/meliksahturker/Desktop/Turkish-NLP-preprocessing-module/pp/morph_analyzer/model.py - INFO - 116} - Loading Pre-Trained Model\n",
-      "2021-08-27 20:25:18,565 - /Users/meliksahturker/Desktop/Turkish-NLP-preprocessing-module/pp/morph_analyzer/model.py - INFO - 119} - Ready\n"
+      "2021-09-07 22:20:53,256 - /Users/meliksahturker/Desktop/Turkish-NLP-preprocessing-module/pp/morph_analyzer/model.py - INFO - 116} - Loading Pre-Trained Model\n",
+      "2021-09-07 22:20:54,320 - /Users/meliksahturker/Desktop/Turkish-NLP-preprocessing-module/pp/morph_analyzer/model.py - INFO - 119} - Ready\n"
      ]
     }
    ],
@@ -205,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "id": "f61f31ca",
    "metadata": {},
    "outputs": [
@@ -228,7 +322,7 @@
        " 'yirmisekiz']"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -240,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "id": "a7be4284",
    "metadata": {},
    "outputs": [
@@ -250,7 +344,7 @@
        "['böyle', 'şey', 'görmedim', 'duymadım']"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -270,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "id": "e1d4b2dc",
    "metadata": {},
    "outputs": [],
@@ -281,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "id": "55c80eb9",
    "metadata": {},
    "outputs": [
@@ -292,7 +386,7 @@
        " 'Bu harika bir haber!']"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -303,8 +397,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "a65a07c4",
+   "execution_count": 16,
+   "id": "142747e8",
    "metadata": {},
    "outputs": [
     {
@@ -313,7 +407,7 @@
        "['4. Murat, diğer yazım şekli ile IV. Murat, alkollü içecekleri halka yasaklamıştı.']"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -335,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "id": "2a57d18b",
    "metadata": {},
    "outputs": [],
@@ -346,8 +440,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "9f44702b",
+   "execution_count": 18,
+   "id": "564c7a5d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -356,8 +450,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "34d8d94e",
+   "execution_count": 19,
+   "id": "aee1b0f1",
    "metadata": {},
    "outputs": [
     {
@@ -366,7 +460,7 @@
        "['bugün', 'kahvaltıda', 'kahve', 'çay', 'içsem', 'süt', 'içeyim']"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -377,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 20,
    "id": "c686c922",
    "metadata": {},
    "outputs": [
@@ -385,7 +479,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2021-08-27 20:26:13,046 - root - INFO - 60} - Dynamically detected stopwords are: ama, aşı, çok, telefon, gelip\n"
+      "2021-09-07 22:21:50,917 - root - INFO - 60} - Dynamically detected stopwords are: ama, aşı, çok, telefon, gelip\n"
      ]
     }
    ],
@@ -396,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 21,
    "id": "8777a510",
    "metadata": {},
    "outputs": [
@@ -406,7 +500,7 @@
        "['ama', 'aşı', 'çok', 'telefon', 'gelip']"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -417,8 +511,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "601c3e24",
+   "execution_count": 22,
+   "id": "b2134e53",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -427,18 +521,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 23,
    "id": "29d8f913",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array(['şunu', 'sanki', 'hem', 'hiç', 'gerek', 'tarafından', 'burada',\n",
-       "       'fakat', 'orada', 'kendisi'], dtype='<U11')"
+       "array(['bizi', 'gereği', 've', 'ettiğini', 'nerede', 'yapıyor', 'onlara',\n",
+       "       'bazen', 'ediliyor', 'ama'], dtype='<U11')"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -449,7 +543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 24,
    "id": "f1345356",
    "metadata": {},
    "outputs": [
@@ -457,7 +551,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2021-08-27 20:26:13,071 - root - INFO - 67} - List of stop words is unified and updated.\n"
+      "2021-09-07 22:21:50,935 - root - INFO - 67} - List of stop words is unified and updated.\n"
      ]
     }
    ],
@@ -467,7 +561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 25,
    "id": "a0f66703",
    "metadata": {},
    "outputs": [
@@ -487,7 +581,7 @@
        " 'aşı']"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -506,7 +600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 26,
    "id": "c703834c",
    "metadata": {},
    "outputs": [],
@@ -516,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 27,
    "id": "6cb46c0b",
    "metadata": {},
    "outputs": [
@@ -541,7 +635,7 @@
        " 'test')"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -554,7 +648,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 28,
    "id": "a9bd7d7e",
    "metadata": {},
    "outputs": [],
@@ -564,7 +658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 29,
    "id": "33776fa0",
    "metadata": {
     "scrolled": true
@@ -594,7 +688,7 @@
        " 'test']"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -602,48 +696,6 @@
    "source": [
     "t = TweetTokenizer()\n",
     "t.tokenize(sentence)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "id": "04fd6480",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Beşiktaş'tan\n",
-      "  \n",
-      "vapura\n",
-      "binip\n",
-      "Kadıköy'e\n",
-      "geçtim.\n",
-      "E-mail\n",
-      "adresim\n",
-      "turkermeliksah@hotmail.com.\n",
-      "İnternette\n",
-      "#boğaziçi\n",
-      "hashtag'ini\n",
-      "gördüm.\n",
-      "türk\n",
-      "hava\n",
-      "yolları\n",
-      "test\n"
-     ]
-    }
-   ],
-   "source": [
-    "from spacy.tokenizer import Tokenizer\n",
-    "from spacy.lang.tr import Turkish\n",
-    "\n",
-    "nlp = Turkish()\n",
-    "tokenizer = Tokenizer(nlp.vocab)\n",
-    "tokens = tokenizer(sentence)\n",
-    "\n",
-    "for t in tokens:\n",
-    "    print(t)"
    ]
   }
  ],
