--- a/pp/named_entitiy_recognizer/Training CharNER.ipynb
+++ b/pp/named_entitiy_recognizer/Training CharNER.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
     "\n",
     "from nltk.tokenize import WordPunctTokenizer\n",
     "\n",
-    "DATA_PATH = \"../data/\"\n",
+    "DATA_PATH = \"resources/\"\n",
     "CHECKPOINT_DIR = \"saved_models/weights.{epoch:02d}-{val_loss:.2f}.hdf5\""
    ]
   },
@@ -31,26 +31,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "train = pd.read_csv(DATA_PATH + \"df_train_big.csv\", index_col = 0).drop('file', axis = 1)\n",
-    "dev = pd.read_csv(DATA_PATH + \"df_dev.csv\", index_col = 0).drop('file', axis = 1)\n",
-    "test = pd.read_csv(DATA_PATH + \"df_test.csv\", index_col = 0).drop('file', axis = 1)"
+    "train = pd.read_csv(DATA_PATH + \"df_train.csv\", index_col = 0).reset_index()\n",
+    "dev = pd.read_csv(DATA_PATH + \"df_dev.csv\", index_col = 0).reset_index()\n",
+    "test = pd.read_csv(DATA_PATH + \"df_test.csv\", index_col = 0).reset_index()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Text: Uzlaştırıcı politikasını cumhurbaşkanlığı döneminde de sürdürmesine karşın savaş sonunda Fransa ' da gerilimlerin önü alınamadı .\n",
-      "Label: O O O O O O O O O LOC O O O O O O\n"
+      "Text: \" Kapsamlı Deneme Yasağı Anlaşması ' nı ( CTBT ) bazı şartlarla imzalamaya da razı olacak\n",
+      "Label: O O O O O O O O O O O O O O O O\n"
      ]
     }
    ],
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,9 +200,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2021-09-07 22:27:04.295441: I tensorflow/core/platform/cpu_feature_guard.cc:142] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
+      "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
+     ]
+    }
+   ],
    "source": [
     "class CustomNonPaddingTokenLoss(tf.keras.losses.Loss):\n",
     "    def __init__(self, name=\"custom_ner_loss\"):\n",
@@ -231,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -315,28 +324,19 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 15,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "Dropout 0.3: min_val_loss: 0.1579\n",
-    "\n",
-    "Dropout 0.2: min_val_loss: 0.1581"
+    "saved_weights = pd.Series(os.listdir('resources'))\n",
+    "weight_to_load = saved_weights[saved_weights.str.contains('hdf5')].values[0]\n",
+    "model.load_weights('resources/' + weight_to_load)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 16,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "saved_weights = pd.Series(os.listdir('saved_models'))\n",
-    "weight_to_load = saved_weights[saved_weights.str.contains('hdf5')].values[0]\n",
-    "model.load_weights('saved_models/' + weight_to_load)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -513,199 +513,17 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### 0.2 dropout result"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>accuracy</th>\n",
-       "      <th>f1_macro</th>\n",
-       "      <th>f1_micro</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>value</th>\n",
-       "      <td>0.962474</td>\n",
-       "      <td>0.908618</td>\n",
-       "      <td>0.962474</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       accuracy  f1_macro  f1_micro\n",
-       "value  0.962474  0.908618  0.962474"
-      ]
-     },
-     "execution_count": 45,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "calculate_metrics(y_test, y_hat)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### SavasYildirim BERTNER"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 60,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_wikiann_test = pd.read_csv(DATA_PATH + \"df_test.csv\", index_col = 0)\n",
-    "df_wikiann_test = df_wikiann_test.loc[df_wikiann_test['file'] == 'wikiann-test.txt'].reset_index(drop = True).copy()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 63,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Wall time: 14min 22s\n"
+      "2021-09-07 22:27:38.263048: I tensorflow/compiler/mlir/mlir_graph_optimization_pass.cc:185] None of the MLIR Optimization Passes are enabled (registered 2)\n"
      ]
-    }
-   ],
-   "source": [
-    "%%time\n",
-    "y_test = []\n",
-    "y_hat = []\n",
-    "for idx in df_wikiann_test.index.values:\n",
-    "    text = df_wikiann_test.loc[idx, 'text']\n",
-    "    #len_text = len(list(text))\n",
-    "    #if len_text <= seq_len:\n",
-    "    label = df_wikiann_test.loc[idx, 'label'].split()\n",
-    "\n",
-    "    _, pred = pipeline(text)\n",
-    "\n",
-    "    y_test += label\n",
-    "    y_hat += pred\n",
-    "    \n",
-    "assert len(y_test) == len(y_hat)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 64,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>accuracy</th>\n",
-       "      <th>f1_macro</th>\n",
-       "      <th>f1_micro</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>value</th>\n",
-       "      <td>0.949852</td>\n",
-       "      <td>0.90326</td>\n",
-       "      <td>0.949852</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       accuracy  f1_macro  f1_micro\n",
-       "value  0.949852   0.90326  0.949852"
-      ]
-     },
-     "execution_count": 64,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "calculate_metrics(y_test, y_hat)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**TODO:**\n",
-    "- Dropout rate arttırarak daha düşük bir val_loss elde etmeye çalış.\n",
-    "- TWNERTC ile ve olmadan da train edip val_loss'a bak.\n",
-    "\n",
-    "\n",
-    "**DONE:**\n",
-    "\n",
-    "- BOYUTU 256'dan büyük olanları ortadan 2'ye bölüp 2 kez yap. Bunu recursive br şekilde yapıp birleştirebilirim\n",
-    "- Literatürden modellerle kıyaslamaya çalış\n",
-    "- Biraz daha büyük bir model train etsem sonuç nasıl değişir?\n",
-    "- CustomLoss ile değil de default catloss ile eğitsem sonuç nasıl değişir?\n",
-    "- mask_zero ile eğitsem sonuç nasıl değişir?\n",
-    "- Word-Level train etsem sonuç nasıl değişir?\n",
-    "- RNN size 128 units yapıp 5 layer ile train et\n",
-    "- savasyildirim'in metrik'leri ile kıyasla\n",
-    "- Aynı architecture ile WORDNer train edip metric'lere bak: CharNER is slightly better than WORDNer"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 53,
-   "metadata": {},
-   "outputs": [
+    },
     {
      "data": {
       "text/plain": [
@@ -732,7 +550,7 @@
        " ('.', 'O')]"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -745,7 +563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -770,7 +588,7 @@
        " ('kalacak', 'O')]"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -783,7 +601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -806,16 +624,17 @@
        " ('Takımı', 'ORG'),\n",
        " (\"'\", 'O'),\n",
        " ('nda', 'O'),\n",
-       " ('çalışıyorum', 'O')]"
+       " ('çalışıyorum', 'O'),\n",
+       " ('.', 'O')]"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "text = \"Ben Melikşah, 28 yaşındayım, İstanbul'da ikamet ediyorum ve VNGRS AI Takımı'nda çalışıyorum\"\n",
+    "text = \"Ben Melikşah, 28 yaşındayım, İstanbul'da ikamet ediyorum ve VNGRS AI Takımı'nda çalışıyorum.\"\n",
     "tokens, entities = pipeline(text)\n",
     "[(t,e) for t,e in zip(tokens, entities)]"
    ]
