tokenizers are re-created due to index mis-match

--- a/examples.ipynb
+++ b/examples.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "818964af",
    "metadata": {},
    "source": [
     "#### Morphological Analyzer"
@@ -11,7 +10,6 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "546cd174",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +21,6 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "0acc0352",
    "metadata": {
     "scrolled": true
    },
@@ -54,7 +51,6 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "746635bc",
    "metadata": {},
    "outputs": [
     {
@@ -79,7 +75,6 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "07fe767a",
    "metadata": {},
    "outputs": [
     {
@@ -100,7 +95,6 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "356ed013",
    "metadata": {},
    "outputs": [
     {
@@ -124,7 +118,6 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "0c73e419",
    "metadata": {},
    "outputs": [
     {
@@ -148,7 +141,6 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "644cc104",
    "metadata": {},
    "outputs": [
     {
@@ -168,7 +160,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "442ee1d3",
    "metadata": {},
    "source": [
     "#### Named Entity Recognizer"
@@ -176,37 +167,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "abef8b95",
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2021-09-07 22:20:17,578 - tensorflow - DEBUG - 36} - Falling back to TensorFlow client; we recommended you install the Cloud TPU client directly with pip install cloud-tpu-client.\n",
-      "2021-09-07 22:20:18,876 - h5py._conv - DEBUG - 47} - Creating converter from 7 to 5\n",
-      "2021-09-07 22:20:18,877 - h5py._conv - DEBUG - 47} - Creating converter from 5 to 7\n",
-      "2021-09-07 22:20:18,877 - h5py._conv - DEBUG - 47} - Creating converter from 7 to 5\n",
-      "2021-09-07 22:20:18,878 - h5py._conv - DEBUG - 47} - Creating converter from 5 to 7\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2021-09-07 22:20:26.352932: I tensorflow/core/platform/cpu_feature_guard.cc:142] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
-      "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2021-09-07 22:20:27,858 - h5py._conv - DEBUG - 77} - Creating converter from 3 to 5\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#import os\n",
     "#os.environ['TF_XLA_FLAGS'] = '--tf_xla_enable_xla_devices'\n",
@@ -216,42 +179,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "a80b4315",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2021-09-07 22:20:27.909913: I tensorflow/compiler/mlir/mlir_graph_optimization_pass.cc:185] None of the MLIR Optimization Passes are enabled (registered 2)\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
        "[('Ben', 'O'),\n",
-       " ('Melikşah', 'O'),\n",
+       " ('Melikşah', 'PER'),\n",
        " (',', 'O'),\n",
        " ('28', 'O'),\n",
        " ('yaşındayım', 'O'),\n",
        " (',', 'O'),\n",
-       " ('İstanbul', 'ORG'),\n",
+       " ('İstanbul', 'LOC'),\n",
        " (\"'\", 'O'),\n",
        " ('da', 'O'),\n",
        " ('ikamet', 'O'),\n",
        " ('ediyorum', 'O'),\n",
        " ('ve', 'O'),\n",
-       " ('VNGRS', 'LOC'),\n",
-       " ('AI', 'LOC'),\n",
-       " ('Takımı', 'LOC'),\n",
+       " ('VNGRS', 'ORG'),\n",
+       " ('AI', 'ORG'),\n",
+       " ('Takımı', 'ORG'),\n",
        " (\"'\", 'O'),\n",
        " ('nda', 'O'),\n",
        " ('çalışıyorum', 'O'),\n",
        " ('.', 'O')]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -262,7 +217,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a72523c0",
    "metadata": {},
    "source": [
     "#### Normalizer\n",
@@ -280,7 +234,6 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "8f8941f1",
    "metadata": {},
    "outputs": [
     {
@@ -300,7 +253,6 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "f61f31ca",
    "metadata": {},
    "outputs": [
     {
@@ -335,7 +287,6 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "a7be4284",
    "metadata": {},
    "outputs": [
     {
@@ -356,7 +307,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3d2a5537",
    "metadata": {},
    "source": [
     "#### Sentence Splitter"
@@ -365,7 +315,6 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "e1d4b2dc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -376,7 +325,6 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "55c80eb9",
    "metadata": {},
    "outputs": [
     {
@@ -398,7 +346,6 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "142747e8",
    "metadata": {},
    "outputs": [
     {
@@ -418,7 +365,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ac81efa3",
    "metadata": {},
    "source": [
     "#### Stopword Remover\n",
@@ -430,7 +376,6 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "2a57d18b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -441,7 +386,6 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "564c7a5d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -451,7 +395,6 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "aee1b0f1",
    "metadata": {},
    "outputs": [
     {
@@ -472,7 +415,6 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "c686c922",
    "metadata": {},
    "outputs": [
     {
@@ -491,7 +433,6 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "8777a510",
    "metadata": {},
    "outputs": [
     {
@@ -512,7 +453,6 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "b2134e53",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -522,7 +462,6 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "29d8f913",
    "metadata": {},
    "outputs": [
     {
@@ -544,7 +483,6 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "f1345356",
    "metadata": {},
    "outputs": [
     {
@@ -562,7 +500,6 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "a0f66703",
    "metadata": {},
    "outputs": [
     {
@@ -592,7 +529,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0df32ac4",
    "metadata": {},
    "source": [
     "#### Tokenizer"
@@ -601,7 +537,6 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "c703834c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -611,7 +546,6 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "6cb46c0b",
    "metadata": {},
    "outputs": [
     {
@@ -649,7 +583,6 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "a9bd7d7e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -659,7 +592,6 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "33776fa0",
    "metadata": {
     "scrolled": true
    },
@@ -701,7 +633,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
