--- a/pp/named_entitiy_recognizer/Training CharNER.ipynb
+++ b/pp/named_entitiy_recognizer/Training CharNER.ipynb
@@ -2,10 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import pickle\n",
     "import os\n",
     "os.environ[\"TF_FORCE_GPU_ALLOW_GROWTH\"]=\"true\"\n",
     "\n",
@@ -31,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,15 +43,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Text: \" Kapsamlı Deneme Yasağı Anlaşması ' nı ( CTBT ) bazı şartlarla imzalamaya da razı olacak\n",
-      "Label: O O O O O O O O O O O O O O O O\n"
+      "Text: İşte bu fark , Türkiye ' nin üçüncü bin yıldaki temel şansını oluşturuyor\n",
+      "Label: O O O O LOC O O O O O O O O\n"
      ]
     }
    ],
@@ -62,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,12 +182,43 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### Saving Tokenizers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This part is run once only\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"\n",
+    "with open('tokenizer_X.pickle', 'wb') as handle:\n",
+    "    pickle.dump(tokenizer_X, handle, protocol=pickle.HIGHEST_PROTOCOL)\n",
+    "    \n",
+    "with open('tokenizer_y.pickle', 'wb') as handle:\n",
+    "    pickle.dump(tokenizer_y, handle, protocol=pickle.HIGHEST_PROTOCOL)\n",
+    "\"\"\"\n",
+    "print('This part is run once only')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### RNN Model"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,18 +232,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2021-09-07 22:27:04.295441: I tensorflow/core/platform/cpu_feature_guard.cc:142] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
-      "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "class CustomNonPaddingTokenLoss(tf.keras.losses.Loss):\n",
     "    def __init__(self, name=\"custom_ner_loss\"):\n",
@@ -325,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -336,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -601,7 +624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -628,7 +651,7 @@
        " ('.', 'O')]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -638,18 +661,11 @@
     "tokens, entities = pipeline(text)\n",
     "[(t,e) for t,e in zip(tokens, entities)]"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
